<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginEnd="13dp"
            android:layout_above="@+id/layout2Buttons"
            android:id="@+id/ImgTicTacToe"
            android:contentDescription="@string/empty"
            android:scaleType="centerInside" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/adView"
            android:id="@+id/layout2Buttons"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:text="@string/singleplayer"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:id="@+id/BtnSinglePlayer"
                android:onClick="OnClickSinglePlayer"
                style="@style/Widget.AppCompat.Button" />

            <Button
                android:text="@string/multiplayer"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/BtnMultiPlayer"
                android:onClick="OnClickMultiPlayer"
                style="@style/Widget.AppCompat.Button" />

        </LinearLayout>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="ca-app-pub-1749022888312040/9456742619">
        </com.google.android.gms.ads.AdView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>