<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MultiplayerActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="6dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/TxtTurn"
                android:textColor="#000000"
                android:text="@string/turn" />

            <TextView
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:id="@+id/TxtTurnElement"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3" >

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:id="@+id/BtnA1"
                android:textSize="100sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textAlignment="center"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:gravity="center_vertical|center_horizontal|center"
                android:background="@drawable/button_a1"
                style="@style/Widget.AppCompat.Button"
                tools:ignore="NestedWeights"
                android:contentDescription="@string/empty"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:id="@+id/BtnB1"
                android:textSize="100sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textAlignment="center"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:gravity="center_vertical|center_horizontal|center"
                android:background="@drawable/button_b1"
                style="@style/Widget.AppCompat.Button"
                android:contentDescription="@string/empty"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:id="@+id/BtnC1"
                android:textSize="100sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textAlignment="center"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:gravity="center_vertical|center_horizontal|center"
                android:background="@drawable/button_c1"
                style="@style/Widget.AppCompat.Button"
                android:contentDescription="@string/empty"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3" >

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:id="@+id/BtnA2"
                android:textSize="100sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textAlignment="center"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:gravity="center_vertical|center_horizontal|center"
                android:background="@drawable/button_a2"
                style="@style/Widget.AppCompat.Button"
                tools:ignore="NestedWeights"
                android:contentDescription="@string/empty"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:id="@+id/BtnB2"
                android:textSize="100sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textAlignment="center"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:gravity="center_vertical|center_horizontal|center"
                android:background="@drawable/button_b2"
                style="@style/Widget.AppCompat.Button"
                android:contentDescription="@string/empty"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:id="@+id/BtnC2"
                android:textSize="100sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textAlignment="center"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:gravity="center_vertical|center_horizontal|center"
                android:background="@drawable/button_c2"
                style="@style/Widget.AppCompat.Button"
                android:contentDescription="@string/empty"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3" >

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:id="@+id/BtnA3"
                android:textSize="100sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textAlignment="center"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:gravity="center_vertical|center_horizontal|center"
                android:background="@drawable/button_a3"
                style="@style/Widget.AppCompat.Button"
                tools:ignore="NestedWeights"
                android:contentDescription="@string/empty"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:id="@+id/BtnB3"
                android:textSize="100sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textAlignment="center"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:gravity="center_vertical|center_horizontal|center"
                android:background="@drawable/button_b3"
                style="@style/Widget.AppCompat.Button"
                android:contentDescription="@string/empty"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:id="@+id/BtnC3"
                android:textSize="100sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textAlignment="center"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:gravity="center_vertical|center_horizontal|center"
                android:background="@drawable/button_c3"
                style="@style/Widget.AppCompat.Button"
                android:contentDescription="@string/empty"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TxtXelement"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal|center"
                android:text="@string/Xelement"
                android:textColor="#FF3333"
                android:textSize="30sp"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/Txt2pointsX"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal|center"
                android:text="@string/colon"
                android:textColor="#000000"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/TxtXwins"
                android:layout_width="65dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal|end"
                android:text="@string/empty"
                android:textColor="#000000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/BtnNewGame"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="onClickNewGame"
                android:text="@string/button_new_game" />

            <TextView
                android:id="@+id/TxtOelement"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal|center"
                android:text="@string/Oelement"
                android:textColor="#3333FF"
                android:textSize="30sp"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/Txt2pointsO"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal|center"
                android:text="@string/colon"
                android:textColor="#000000"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/TxtOwins"
                android:layout_width="65dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal|end"
                android:text="@string/empty"
                android:textColor="#000000"
                android:textSize="30sp" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>